--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -1,9 +1,9 @@
 footer {
-    width: 100%;
-    background: #333;
-    padding: 100px 0px;
-    border-top: 1px solid #888;
-  }
+  width: 100vw;
+  background: rgb(0, 0, 0);
+  padding: 100px 0px;
+  border-top: 1px solid #888;
+}
   footer .inner {
     width: 1180px;
     margin: 0px auto;
